--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bluebird": "^3.0.6",
     "cheerio": "^0.19.0",
-    "request": "^2.67.0"
+    "querystring": "^0.2.0",
+    "request": "^2.67.0",
+    "ws": "^0.8.1"
   }
 }
