--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.0.6",
     "cheerio": "^0.19.0",
+    "ejs": "^2.3.4",
     "querystring": "^0.2.0",
     "request": "^2.67.0",
     "ws": "^0.8.1"
