--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.0.6",
     "cheerio": "^0.19.0",
     "ejs": "^2.3.4",
+    "log4js": "^0.6.29",
     "querystring": "^0.2.0",
     "request": "^2.67.0",
     "ws": "^0.8.1"
